--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,18 @@
   display: flex;
   flex-direction: column;
 }
+
+.imgProduct {
+  width: 150px;
+}
+
+.product {
+  width: 200px;
+}
+
+.products-section {
+  display: flex;
+  flex-direction: column;
+  float: right;
+  width: 400px;
+}
